[workspace]
members = ["packages/*"]

# Resolver has to be set explicitely in workspaces, see https://github.com/rust-lang/cargo/issues/9956
resolver = "2"

[workspace.package]
version = "2.0.0"

[workspace.dependencies]
cw-utils = { path = "packages/cw-utils", version = "2.0.0" }
cosmwasm-schema = "2.0.0"
cosmwasm-std = { version = "2.0.0", default-features = false, features = ["std"] }
cw-storage-plus = { version = "2.0.0", default-features = false }
cw-multi-test = { version = "2.1.0", default-features = false }

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
