[workspace]
members = ["packages/*"]

resolver = "2"

[workspace.package]
version = "3.0.0"

[workspace.dependencies]
cw-utils = { path = "packages/cw-utils", version = "3.0.0" }
cosmwasm-schema = "3.0.1"
cosmwasm-std = { version = "3.0.1", default-features = false, features = ["std"] }
cw-storage-plus = "3.0.0"
thiserror = "2.0.12"
schemars = "0.8.22"
semver = { version = "1.0.26", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
